--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "express": "^4.18.2",
     "extract-loader": "^5.1.0",
     "lit-scss-loader": "^2.0.1",
-    "minify-lit-html-loader": "0.0.3",
+    "minify-lit-html-loader": "github:khmyznikov/minify-lit-html-loader",
     "postcss": "^8.4.23",
     "postcss-loader": "^7.3.0",
     "sass": "^1.62.1",
